--- a/packages/3d-web-voice-chat/package.json
+++ b/packages/3d-web-voice-chat/package.json
@@ -22,7 +22,8 @@
     "@voxeet/voxeet-web-sdk": "3.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "livekit-client": "2.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
