updates project to use my experimental MML dependencies

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint-fix-all": "lerna run --stream --no-bail lint-fix",
     "link-all": "lerna exec \"npm link\" --no-private && npm run print-links",
     "print-links": "echo \"Run this command in the package you would like to link this repo's packages to:\n\"; echo \"npm link\" $(lerna ls --loglevel=error)",
-    "version": "lerna version --no-push --force-publish"
+    "version": "lerna version --no-push --force-publish",
+    "update-imports": "node update-references.js && node update-imports.js && npm install && npm run build && npm run lint-fix-all"
   },
   "workspaces": [
     "packages/*",
