--- a/example/local-only-multi-user-3d-web-experience/client/package.json
+++ b/example/local-only-multi-user-3d-web-experience/client/package.json
@@ -18,10 +18,10 @@
     "@mml-io/3d-web-text-chat": "^0.19.0",
     "@mml-io/3d-web-user-networking": "^0.19.0",
     "@mml-io/3d-web-voice-chat": "^0.19.0",
-    "@mml-io/networked-dom-document": "0.17.1",
-    "mml-web": "0.17.1",
-    "mml-web-runner": "0.17.1",
-    "three": "0.163.0"
+    "three": "0.163.0",
+    "@thecodetherapy/networked-dom-document": "0.17.1",
+    "@thecodetherapy/mml-web": "0.17.1",
+    "@thecodetherapy/mml-web-runner": "0.17.1"
   },
   "devDependencies": {
     "@types/three": "0.163.0"
