--- a/example/local-only-multi-user-3d-web-experience/server/package.json
+++ b/example/local-only-multi-user-3d-web-experience/server/package.json
@@ -23,8 +23,8 @@
     "cors": "^2.8.5",
     "express": "4.19.2",
     "express-ws": "5.0.2",
-    "networked-dom-server": "0.17.1",
-    "ws": "8.18.0"
+    "ws": "8.18.0",
+    "@thecodetherapy/networked-dom-server": "0.17.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
