--- a/example/multi-user-3d-web-experience/server/package.json
+++ b/example/multi-user-3d-web-experience/server/package.json
@@ -25,11 +25,11 @@
     "chokidar": "^3.6.0",
     "express": "4.19.2",
     "express-ws": "5.0.2",
-    "networked-dom-server": "0.17.1",
     "ws": "8.18.0",
     "livekit-server-sdk": "2.6.0",
     "dotenv": "16.4.5",
-    "canvas": "2.11.2"
+    "canvas": "2.11.2",
+    "@thecodetherapy/networked-dom-server": "0.17.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
