--- a/packages/3d-web-avatar/package.json
+++ b/packages/3d-web-avatar/package.json
@@ -20,10 +20,10 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
-    "@mml-io/model-loader": "0.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.163.0"
+    "three": "0.163.0",
+    "@thecodetherapy/model-loader": "0.17.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
