--- a/packages/3d-web-client-core/package.json
+++ b/packages/3d-web-client-core/package.json
@@ -19,14 +19,14 @@
   },
   "dependencies": {
     "@mml-io/3d-web-avatar": "^0.19.0",
-    "@mml-io/model-loader": "0.17.1",
     "@monogrid/gainmap-js": "^3.0.5",
     "@tweakpane/core": "2.0.4",
     "@tweakpane/plugin-essentials": "0.2.1",
-    "mml-web": "0.17.1",
     "postprocessing": "6.35.6",
     "three-mesh-bvh": "0.7.6",
-    "tweakpane": "4.0.4"
+    "tweakpane": "4.0.4",
+    "@thecodetherapy/model-loader": "0.17.1",
+    "@thecodetherapy/mml-web": "0.17.1"
   },
   "peerDependencies": {
     "three": ">= 0.163.0"
