--- a/packages/3d-web-standalone-avatar-editor/package.json
+++ b/packages/3d-web-standalone-avatar-editor/package.json
@@ -22,10 +22,10 @@
     "@mml-io/3d-web-avatar": "^0.19.0",
     "@mml-io/3d-web-avatar-editor-ui": "^0.19.0",
     "@mml-io/3d-web-client-core": "^0.19.0",
-    "@mml-io/model-loader": "0.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.163.0"
+    "three": "0.163.0",
+    "@thecodetherapy/model-loader": "0.17.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
