--- a/packages/3d-web-experience-client/package.json
+++ b/packages/3d-web-experience-client/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@mml-io/3d-web-avatar-selection-ui": "^0.19.0",
     "@mml-io/3d-web-client-core": "^0.19.0",
+    "@mml-io/3d-web-client-editor": "^0.19.0",
     "@mml-io/3d-web-text-chat": "^0.19.0",
     "@mml-io/3d-web-user-networking": "^0.19.0",
     "@mml-io/3d-web-voice-chat": "^0.19.0",
