--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
   },
   "extends": [
     "airbnb-typescript/base",
@@ -12,9 +12,9 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:import/typescript",
-    'plugin:react/recommended',
-    'plugin:react/jsx-runtime',
-    'plugin:react-hooks/recommended'
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "plugin:react-hooks/recommended",
   ],
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
@@ -23,8 +23,8 @@
       "error",
       {
         "newlines-between": "always",
-        "alphabetize": { "order": "asc", "caseInsensitive": true }
-      }
+        "alphabetize": { "order": "asc", "caseInsensitive": true },
+      },
     ],
     "@typescript-eslint/lines-between-class-members": "off",
     "@typescript-eslint/no-inferrable-types": "off",
@@ -34,20 +34,20 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-unused-expressions": "off",
-    "import/no-extraneous-dependencies": "error",
-    "import/extensions": "off"
+    "import/no-extraneous-dependencies": "off",
+    "import/extensions": "off",
   },
   "overrides": [
     {
       "files": ["*.js"],
       "rules": {
-        "@typescript-eslint/no-var-requires": "off"
-      }
-    }
+        "@typescript-eslint/no-var-requires": "off",
+      },
+    },
   ],
   "settings": {
     "react": {
-      "version": "detect"
-    }
-  }
+      "version": "detect",
+    },
+  },
 }
