--- a/packages/3d-web-experience-server/package.json
+++ b/packages/3d-web-experience-server/package.json
@@ -24,6 +24,7 @@
     "@mml-io/3d-web-voice-chat": "^0.19.0",
     "chokidar": "^3.6.0",
     "cors": "^2.8.5",
+    "dotenv": "16.4.5",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
     "networked-dom-server": "0.18.0",
