--- a/packages/3d-web-text-chat/package.json
+++ b/packages/3d-web-text-chat/package.json
@@ -18,6 +18,7 @@
     "lint-fix": "eslint \"./{src,test}/**/*.{js,jsx,ts,tsx}\" --fix"
   },
   "dependencies": {
+    "bad-words": "^4.0.0",
     "express": "4.19.2",
     "express-ws": "5.0.2",
     "react": "^18.3.1",
