--- a/example/multi-user-3d-web-experience/server/package.json
+++ b/example/multi-user-3d-web-experience/server/package.json
@@ -22,19 +22,21 @@
     "@mml-io/3d-web-experience-server": "^0.19.0",
     "@mml-io/3d-web-text-chat": "^0.19.0",
     "@mml-io/3d-web-user-networking": "^0.19.0",
+    "canvas": "2.11.2",
     "chokidar": "^3.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "16.4.5",
     "express": "4.19.2",
     "express-ws": "5.0.2",
-    "ws": "8.18.0",
     "livekit-server-sdk": "2.6.0",
-    "dotenv": "16.4.5",
-    "canvas": "2.11.2",
-    "networked-dom-server": "0.18.0"
+    "networked-dom-server": "0.18.0",
+    "ws": "8.18.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
-    "@types/node": "^20.14.10"
+    "@types/node": "^20.14.10",
+    "@types/node-fetch": "^2.6.11"
   }
 }
