--- a/packages/3d-web-avatar/package.json
+++ b/packages/3d-web-avatar/package.json
@@ -23,8 +23,7 @@
     "@mml-io/model-loader": "0.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.163.0",
-    "@mml-io/model-loader": "0.18.0"
+    "three": "0.163.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
