--- a/example/multi-user-3d-web-experience/client/package.json
+++ b/example/multi-user-3d-web-experience/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mml-io/3d-web-experience-client": "^0.21.1",
+    "@mml-io/3d-web-client-core": "^0.21.1",
     "three": "0.163.0"
   },
   "devDependencies": {
