--- a/example/local-only-multi-user-3d-web-experience/client/package.json
+++ b/example/local-only-multi-user-3d-web-experience/client/package.json
@@ -18,10 +18,10 @@
     "@mml-io/3d-web-text-chat": "^0.21.3",
     "@mml-io/3d-web-user-networking": "^0.21.3",
     "@mml-io/3d-web-voice-chat": "^0.21.3",
-    "@mml-io/mml-web": "0.19.3",
-    "@mml-io/mml-web-runner": "0.19.3",
-    "@mml-io/mml-web-threejs-standalone": "0.19.3",
-    "@mml-io/networked-dom-document": "0.19.3",
+    "@mml-io/mml-web": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/mml-web-runner": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/mml-web-threejs-standalone": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/networked-dom-document": "0.0.0-experimental-8ff5dac-20250221",
     "three": "0.163.0"
   },
   "devDependencies": {
