--- a/example/web-asset-compress/server/package.json
+++ b/example/web-asset-compress/server/package.json
@@ -22,6 +22,7 @@
     "@gltf-transform/extensions": "3.10.1",
     "@gltf-transform/functions": "3.10.1",
     "@types/draco3dgltf": "1.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "draco3dgltf": "1.5.7",
     "esbuild": "0.24.2",
