--- a/example/web-asset-compress/server/package.json
+++ b/example/web-asset-compress/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mml-io/3d-web-asset-compress-server",
+  "name": "@mml-io/3d-web-asset-compress",
   "private": true,
   "version": "0.21.3",
   "files": [
@@ -13,6 +13,7 @@
     "build": "rimraf ./build && tsx ./build.ts --build",
     "iterate": "tsx ./build.ts --watch",
     "iterate:start": "node --enable-source-maps ./build/index.js",
+    "start": "cross-env NODE_ENV=production node build/index.js",
     "type-check": "tsc --noEmit",
     "lint": "eslint \"./{src,test}/**/*.{js,jsx,ts,tsx}\" --max-warnings 0",
     "lint-fix": "eslint \"./{src,test}/**/*.{js,jsx,ts,tsx}\" --fix"
