--- a/packages/3d-web-avatar/package.json
+++ b/packages/3d-web-avatar/package.json
@@ -20,7 +20,7 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
-    "@mml-io/model-loader": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/model-loader": "0.19.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "0.163.0"
