--- a/packages/3d-web-client-core/package.json
+++ b/packages/3d-web-client-core/package.json
@@ -19,9 +19,9 @@
   },
   "dependencies": {
     "@mml-io/3d-web-avatar": "^0.21.3",
-    "@mml-io/mml-web": "0.0.0-experimental-8ff5dac-20250221",
-    "@mml-io/mml-web-threejs": "0.0.0-experimental-8ff5dac-20250221",
-    "@mml-io/model-loader": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/mml-web": "0.19.4",
+    "@mml-io/mml-web-threejs": "0.19.4",
+    "@mml-io/model-loader": "0.19.4",
     "@monogrid/gainmap-js": "^3.1.0",
     "@tweakpane/core": "2.0.5",
     "@tweakpane/plugin-essentials": "0.2.1",
