--- a/packages/3d-web-experience-server/package.json
+++ b/packages/3d-web-experience-server/package.json
@@ -22,7 +22,7 @@
     "@mml-io/3d-web-text-chat": "^0.21.3",
     "@mml-io/3d-web-user-networking": "^0.21.3",
     "@mml-io/3d-web-voice-chat": "^0.21.3",
-    "@mml-io/networked-dom-server": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/networked-dom-server": "0.19.4",
     "canvas": "2.11.2",
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
