--- a/packages/3d-web-standalone-avatar-editor/package.json
+++ b/packages/3d-web-standalone-avatar-editor/package.json
@@ -22,7 +22,7 @@
     "@mml-io/3d-web-avatar": "^0.21.3",
     "@mml-io/3d-web-avatar-editor-ui": "^0.21.3",
     "@mml-io/3d-web-client-core": "^0.21.3",
-    "@mml-io/model-loader": "0.0.0-experimental-8ff5dac-20250221",
+    "@mml-io/model-loader": "0.19.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "0.163.0"
