--- a/packages/3d-web-avatar-editor-ui/package.json
+++ b/packages/3d-web-avatar-editor-ui/package.json
@@ -17,7 +17,7 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint \"./{src,test}/**/*.{js,jsx,ts,tsx}\" --max-warnings 0",
     "lint-fix": "eslint \"./{src,test}/**/*.{js,jsx,ts,tsx}\" --fix",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "@mml-io/3d-web-avatar": "^0.22.0",
