--- a/apps/local-only-3d-web-experience/client/package.json
+++ b/apps/local-only-3d-web-experience/client/package.json
@@ -18,13 +18,13 @@
     "@mml-io/3d-web-text-chat": "^0.22.0",
     "@mml-io/3d-web-user-networking": "^0.22.0",
     "@mml-io/3d-web-voice-chat": "^0.22.0",
-    "@mml-io/mml-web": "0.19.7",
-    "@mml-io/mml-web-runner": "0.19.7",
-    "@mml-io/mml-web-threejs-standalone": "0.19.7",
-    "@mml-io/networked-dom-document": "0.19.7",
-    "three": "0.163.0"
+    "@mml-io/mml-web": "0.21.0",
+    "@mml-io/mml-web-runner": "0.21.0",
+    "@mml-io/mml-web-threejs-standalone": "0.21.0",
+    "@mml-io/networked-dom-document": "^0.21.0",
+    "three": "0.178.0"
   },
   "devDependencies": {
-    "@types/three": "0.163.0"
+    "@types/three": "0.178.0"
   }
 }
